LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -9,7 +9,7 @@
   "reconnectNow": "gleich probieren",
   "tryingToReconnect": "Wir versuchen es erneut ...",
   "reconnectAlert": "Sie wurden erfolgreich wieder verbunden",
-  "noRoomFound": "Wir können leider nicht finden, wonach Sie suchen – die Gruppe wurde eventuell gelöscht, umbenannt oder verschoben.",
+  "noGroupFound": "Wir können leider nicht finden, wonach Sie suchen – die Gruppe wurde eventuell gelöscht, umbenannt oder verschoben.",
   "noMessageFound": "Wir konnten die gesuchte Nachricht nicht finden.",
   "cannotMessageYourself": "Sie können sich selbst keine Nachrichten schreiben.",
   "loadingChatHistory": "Konversationsverlauf wird geladen...",
@@ -30,34 +30,34 @@
   "inviteToGroup": "Zur Gruppe einladen",
   "createGroup": "Gruppe erstellen",
   "inviteMembers": "Mitglieder einladen",
-  "typeName": "Mitglieder hinzufügen…",
+  "addMembers": "Mitglieder hinzufügen…",
   "loading": "Lade...",
   "everyoneInvited": "Alle Mitglieder wurden bereits zu dieser Gruppe eingeladen",
   "feelsLonely": "Ein bisschen einsam hier, oder?",
   "noOtherMembers": "Es scheint, als ob Ihre Grape-Organisation noch keine Mitglieder außer Ihnen hat. Ein Messenger funktioniert meistens mit mehreren Mitgliedern deutlich besser, also warum nicht ein paar einladen? Sobald jemand beitritt können Sie Ihre Konversationen beginnen.",
   "usersNotFoundFor": "Niemand gefunden für",
-  "inviteUsersNow": "jetzt Mitglieder einladen",
+  "inviteMembersNow": "jetzt Mitglieder einladen",
+  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUpload": "Datei hier ablegen, um sie zu teilen!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "inviteToOrganization": "Laden Sie ein neues Mitglied in Ihre Organisation ein",
   "dropFileToUploadMaxFileSize": "Fast alle Dateien bis zu einer Größe von {limit} MB werden unterstützt.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Lade {uploading} von {total} Dateien hoch",
   "_fileUploadTitle.comment": "Upload notification title",
-  "fileUploadTitleFinished": "Upload Status",
-  "_fileUploadTitleFinished.comment": "Upload notification title",
+  "fileUploadStatus": "Upload Status",
+  "_fileUploadStatus.comment": "Upload notification title",
   "fileTooBig": "Die Datei überschreitet die maximal zulässige Größe von {limit} MB.",
   "keyESC": "ESC",
   "hitKeyToCancelEditing": "Drücken Sie {key} um das Bearbeiten zu beenden.",
   "quoteFooter": "- [{author}]({pmPath}) ([Originalnachricht]({messageUrl}))",
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} schreibt gerade",
-  "userAndUsersAreTyping": "{users} und {user} schreiben gerade",
+  "usersAndUserAreTyping": "{users} und {user} schreiben gerade",
   "usersAreTyping": "{users} und {othersAmount} {othersAmount, plural, one {other} other {others}} schreiben gerade",
-  "imageWithDescr": "Bild: [{description}]",
-  "_imageWithDescr.comment": "**Used when rendered inline image from markdown with description.**",
-  "imageWithoutDescr": "Bild: [Keine Beschreibung]",
-  "_imageWithoutDescr.comment": "**Used when rendered inline image from markdown without description.**",
+  "imageWithDescription": "Bild: [{description}]",
+  "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
+  "imageWithoutDescription": "Bild: [Keine Beschreibung]",
+  "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Zu Favoriten hinzufügen",
   "_pinToFavorites.comment": "Tooltip text",
   "labeledMessagesTooltip": "Wichtige Nachrichten",
@@ -167,11 +167,11 @@
   "emailAddresses": "E-Mail Adressen",
   "inviteLink": "Nutzen Sie den Link zur Einladung",
   "inviteToOrgTitle": "Laden Sie Mitglieder in Ihre Organisation ein",
-  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "inviteToOrgNote": "Laden Sie mehrere Mitglieder ein, indem Sie ihre E-Mail Adressen mit Kommas trennen.",
   "InviteToOrgMessage": "Fügen Sie eine persönliche Nachricht an.",
   "loadingLink": "Link wird geladen..",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
+  "inviteToOrgError": "Geben Sie gültige E-Mail Adressen ein, getrennt durch ein Komma.",
   "sendInvites": "Einladungen per E-Mail verschicken",
   "personalMessage": "Persönliche Nachricht",
   "leaveGroupDialogTitle": "Private Gruppe verlassen",
@@ -257,7 +257,6 @@
   "localTime": "Lokale Zeit",
   "newConversation": "Neue Konversation",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "searchMembersAndGroups": "Mitglieder und Gruppen durchsuchen...",
   "nothingThatMatches": "Keine passenden Ergebnisse für ",
   "favorites": "Favoriten",
   "recent": "Aktuell",
