--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -9,7 +9,7 @@
   "reconnectNow": "try it now",
   "tryingToReconnect": "Trying to reconnect ...",
   "reconnectAlert": "You've been successfully reconnected!",
-  "noRoomFound": "We could not find what you were looking for - the group might have been deleted, renamed or moved.",
+  "noGroupFound": "We could not find what you were looking for - the group might have been deleted, renamed or moved.",
   "noMessageFound": "We could not find the message you were looking for.",
   "cannotMessageYourself": "You can't message yourself.",
   "loadingChatHistory": "Loading your chat history…",
@@ -30,13 +30,13 @@
   "inviteToGroup": "Invite to group",
   "createGroup": "Create group",
   "inviteMembers": "Invite members",
-  "typeName": "Add members…",
+  "addMembers": "Add members…",
   "loading": "Loading...",
   "everyoneInvited": "Everyone has been invited to this group",
   "feelsLonely": "Feeling lonely here?",
   "noOtherMembers": "It seems that your Grape organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
   "usersNotFoundFor": "No one found for",
-  "inviteUsersNow": "Invite members now",
+  "inviteMembersNow": "Invite members now",
   "inviteToOrganization": "Invite a new person to your organization",
   "dropFileToUpload": "Drop your file to upload it!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
@@ -44,20 +44,20 @@
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Uploading {uploading} of {total} files",
   "_fileUploadTitle.comment": "Upload notification title",
-  "fileUploadTitleFinished": "Upload status",
-  "_fileUploadTitleFinished.comment": "Upload notification title",
+  "fileUploadStatus": "Upload status",
+  "_fileUploadStatus.comment": "Upload notification title",
   "fileTooBig": "File exceeds size limit of {limit}mb.",
   "keyESC": "ESC",
   "hitKeyToCancelEditing": "Hit {key} to cancel editing.",
   "quoteFooter": "- [Message]({messageUrl}) from [{author}]({pmPath})",
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} is typing",
-  "userAndUsersAreTyping": "{users} and {user} are typing",
+  "usersAndUserAreTyping": "{users} and {user} are typing",
   "usersAreTyping": "{users} and {othersAmount} {othersAmount, plural, one {other} other {others}} are typing",
-  "imageWithDescr": "Image: [{description}]",
-  "_imageWithDescr.comment": "**Used when rendered inline image from markdown with description.**",
-  "imageWithoutDescr": "Image: [No Description]",
-  "_imageWithoutDescr.comment": "**Used when rendered inline image from markdown without description.**",
+  "imageWithDescription": "Image: [{description}]",
+  "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
+  "imageWithoutDescription": "Image: [No Description]",
+  "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Pin to Favorites",
   "_pinToFavorites.comment": "Tooltip text",
   "labeledMessagesTooltip": "Important Messages",
@@ -80,20 +80,22 @@
   "read": "Read",
   "_read.comment": "message delivery status in tooltip",
   "tasks": "Tasks",
+  "_tasks.comment": "NLP tasks list dialog title.",
   "createTask": "Create Task",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "More Services",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
   "linkToAConnectedTask": "Link to a connected Task",
   "_linkToAConnectedTask.comment": "Nlp create task dialog link label.",
-  "_tasks.comment": "NLP tasks list dialog title.",
   "messageNotSendCheckConnection": "The message couldn't be sent. Check your internet connection and",
   "clickToTryAgain": "click here to try again",
   "roomIsPublic": "This group is public. Every member can join and read the history.",
   "roomIsPrivate": "This group is private. Only invited members can see and join this group.",
   "welcomeToRoom": "Welcome to {channel}",
   "inviteMoreToGroup": "Invite more members to this group",
+  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
   "addServiceIntegration": "Add service integration",
+  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "welcomeToPm": "Private conversation with {partner}",
   "pmIntro": "This is a private conversation between you and {partner}.{br}Private conversations are only accessible to the two of you.",
   "deleteMessagesQuestion": "Delete the selected message?",
@@ -347,8 +349,6 @@
   "notificationSettingsTooltip": "Edit notification settings",
   "membersList": "Members List",
   "_membersList.comment": "Room Info Panel: link to members list of the current room",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
-  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
   "leaveChannel": "Leave {channel}",
   "_leaveChannel.comment": "Room Info Panel: leave room link",
   "members": "Members",
