LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -257,6 +257,7 @@
   "localTime": "Lokale Zeit",
   "newConversation": "Neue Konversation",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
+  "searchMembersAndGroups": "Mitglieder und Gruppen suchen...",
   "nothingThatMatches": "Keine passenden Ergebnisse für ",
   "favorites": "Favoriten",
   "recent": "Aktuell",
