--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,4 +1,7 @@
 {
+  "initialGreeting": "Cześć!",
+  "enableNotificationsRequest": "Włącz proszę powiadomienia na pulpicie,",
+  "notificationsExplanation": "aby członkowie Twojego zespołu mogli łatwo dotrzeć do Ciebie na Grape.",
   "enableNotifications": "Włącz powiadomienia",
   "connectionTrouble": "Mamy problem z połączeniem z Grape.",
   "tryToReconnect": "Spróbujemy połączyć się ponownie",
@@ -13,6 +16,8 @@
   "grapeTrial": "Grape wersja próbna",
   "continueTrial": "Kontynuuj okres próbny",
   "enterDetails": "Wprowadź szczegóły",
+  "privateMessageHint": "(Prywatna korespondencja)",
+  "_privateMessageHint.comment": "Browser notification private message hint.",
   "groupInviteNotificationTitle": "{name} zaprosił Cię do grupy {group}",
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Zaproszenie grupowe)",
@@ -85,6 +90,7 @@
   "messageNotSendCheckConnection": "Wiadomość nie mogła zostać wysłana. Sprawdź swoje połączenie internetowe i",
   "clickToTryAgain": "kliknij tutaj, aby spróbować ponownie",
   "roomIsPublic": "Ta grupa jest publiczna. Każdy członek może dołączyć do grupy i przeczytać historię.",
+  "roomIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni użytkownicy mogą ją zobaczyć i dołączyć do tej grupy.",
   "welcomeToRoom": "Witamy w {channel}",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
   "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
@@ -169,6 +175,7 @@
   "sendInvites": "Wyślij zaproszenie na e-mail",
   "personalMessage": "Wiadomość personalna",
   "leaveGroupDialogTitle": "Opuść prywatną grupę",
+  "leaveGroupDialogMessage": "Jesteś pewien, że chcesz opuścić prywatną grupę {channel}? \nNie będziesz mógł ponownie dołączyć do nie {wontAbleToRejoin}, chyba że zostaniesz ponownie zaproszony.",
   "wontAbleToRejoin": "nie będzie w stanie ponownie dołączyć",
   "leaveGroupDialogCancel": "Anuluj",
   "leaveGroupDialogButton": "Opuść prywatną grupę",
@@ -250,10 +257,13 @@
   "localTime": "Czas lokalny",
   "newConversation": "Nowa konwersacja",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy",
   "nothingThatMatches": "Nie ma nic, co by pasowało ",
   "favorites": "Ulubione",
   "recent": "Ostatnie",
   "enterGroupName": "Wpisz nazwę grupy",
+  "private": "Prywatna",
+  "public": "Publiczna",
   "notificationSettingsTitle": "Powiadomienie w {group}",
   "_notificationSettingsTitle.comment": "Notification settings dialog.",
   "notificationSettingDefault": "Domyślne ustawienia powiadomień",
@@ -269,6 +279,7 @@
   "notificationSettingStatusComplete": "zapisany",
   "muteGroupTitle": "Wycisz tą grupę",
   "muteAllNotifications": "Zablokuj wszystkie powiadomienia dla tej grupy na wszystkich swoich urządzeniach",
+  "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z\n        {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości.\n        Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
   "clickHereInlineLink": "kliknij tutaj",
   "_clickHereInlineLink.comment": "Link used inline in the middle of a sentence.",
   "desktopNotificationsTitle": "Powiadomienia desktopowe",
@@ -327,6 +338,8 @@
   "noMessagesFound": "Nie znaleziono żadnych wiadomości",
   "emptyPinnedMessagesSidebarHeadline": "Żadne wiadomości nie zostały jeszcze przypięte!",
   "_emptyPinnedMessagesSidebarHeadline.comment": "Headline in the sidebar, pinned messages zero design.",
+  "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypnij wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
+  "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "makeRoomPrivate": "Uczynić grupę prywatną",
   "makeRoomPublic": "Zmień grupę na publiczną",
   "deleteRoom": "Usuń grupę",
@@ -354,6 +367,7 @@
   "_searchActivities.comment": "Option in messages search sidebar.",
   "mentionsSidebarTitle": "Wzmianki",
   "searchSidebarTitle": "Wyniki wyszukiwania",
+  "whatIDo": "Stanowisko",
   "contactInfo": "Dane kontaktowe",
   "email": "E-mail",
   "skype": "Skype",
