--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,7 +1,7 @@
 {
-  "initialGreeting": "Hej!",
-  "enableNotificationsRequest": "Proszę włączyć powiadomienia na pulpicie",
-  "notificationsExplanation": "żeby członkowie twojego zespołu mogli dotrzeć do Ciebie na Grape.",
+  "initialGreeting": "Cześć!",
+  "enableNotificationsRequest": "Włącz proszę powiadomienia na pulpicie,",
+  "notificationsExplanation": "aby członkowie Twojego zespołu mogli łatwo dotrzeć do Ciebie na Grape.",
   "enableNotifications": "Włącz powiadomienia",
   "connectionTrouble": "Mamy problem z połączeniem z Grape.",
   "tryToReconnect": "Spróbujemy połączyć się ponownie",
@@ -9,14 +9,14 @@
   "reconnectNow": "spróbuj teraz",
   "tryingToReconnect": "Próbujemy ponownie połączyć się...",
   "reconnectAlert": "Udało Ci się ponownie połączyć!",
-  "noRoomFound": "Nie mogliśmy znaleźć tego, czego szukałeś - grupa mogła zostać usunięta, zmieniono nazwę lub została przeniesiona.",
+  "noGroupFound": "Nie mogliśmy znaleźć tego, czego szukałeś - grupa mogła zostać usunięta, zmieniono nazwę lub została przeniesiona.",
   "noMessageFound": "Nie mogliśmy znaleźć wiadomości, której szukałeś.",
   "cannotMessageYourself": "Nie możesz wysyłać sobie wiadomości.",
   "loadingChatHistory": "Ładowanie historii rozmów..",
   "grapeTrial": "Grape wersja próbna",
   "continueTrial": "Kontynuuj okres próbny",
   "enterDetails": "Wprowadź szczegóły",
-  "privateMessageHint": "(Private Conversation)",
+  "privateMessageHint": "(Prywatna korespondencja)",
   "_privateMessageHint.comment": "Browser notification private message hint.",
   "groupInviteNotificationTitle": "{name} zaprosił Cię do grupy {group}",
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
@@ -30,34 +30,34 @@
   "inviteToGroup": "Zaproszenie do grupy",
   "createGroup": "Tworzenie grupy",
   "inviteMembers": "Zaproś użytkowników",
-  "typeName": "Dodaj użytkowników...",
+  "addMembers": "Dodaj użytkowników...",
   "loading": "Ładowanie...",
   "everyoneInvited": "Wszyscy zostali zaproszeni do tej grupy",
   "feelsLonely": "Czujesz się tu samotny?",
   "noOtherMembers": "Wydaje się, że Twoja organizacja Grape nie ma jeszcze innych użytkowników niż ty. Korzystanie z komunikatora jest wygodniejsze, jeżeli korzysta z niego kilka osób, więc dlaczego nie zaprosić kogoś. Jak tylko się dołączą, możecie wrócić i rozpocząć rozmowę.",
   "usersNotFoundFor": "Nie znaleziono nikogo dla",
-  "inviteUsersNow": "Zaproś teraz użytkowników",
+  "inviteMembersNow": "Zaproś teraz użytkowników",
+  "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
   "dropFileToUpload": "Dodaj swój plik, aby go wgrać!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
   "dropFileToUploadMaxFileSize": "Wspieramy prawie każdy typ pliku do rozmiaru {limit}mb.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
   "fileUploadTitle": "Wgrywanie {uploading} plików {total}",
   "_fileUploadTitle.comment": "Upload notification title",
-  "fileUploadTitleFinished": "Stan ładowania",
-  "_fileUploadTitleFinished.comment": "Upload notification title",
+  "fileUploadStatus": "Stan ładowania",
+  "_fileUploadStatus.comment": "Upload notification title",
   "fileTooBig": "Plik przekracza limit rozmiaru {limit}mb.",
   "keyESC": "ESC",
   "hitKeyToCancelEditing": "Naciśnij {key} przycisk, aby anulować edycję.",
   "quoteFooter": "- [Wiadomość]({messageUrl}) z [{author}]({pmPath})",
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} pisze",
-  "userAndUsersAreTyping": "{users} i {user} piszą",
+  "usersAndUserAreTyping": "{users} i {user} piszą",
   "usersAreTyping": "{users} i {othersAmount} {othersAmount, plural, one {other} other {others}} pisze",
-  "imageWithDescr": "Obrazek: [{description}]",
-  "_imageWithDescr.comment": "**Used when rendered inline image from markdown with description.**",
-  "imageWithoutDescr": "Obrazek: [Brak opisu]",
-  "_imageWithoutDescr.comment": "**Used when rendered inline image from markdown without description.**",
+  "imageWithDescription": "Obrazek: [{description}]",
+  "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
+  "imageWithoutDescription": "Obrazek: [Brak opisu]",
+  "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Przypnij do ulubionych",
   "_pinToFavorites.comment": "Tooltip text",
   "labeledMessagesTooltip": "Ważne wiadomości",
@@ -90,7 +90,7 @@
   "messageNotSendCheckConnection": "Wiadomość nie mogła zostać wysłana. Sprawdź swoje połączenie internetowe i",
   "clickToTryAgain": "kliknij tutaj, aby spróbować ponownie",
   "roomIsPublic": "Ta grupa jest publiczna. Każdy członek może dołączyć do grupy i przeczytać historię.",
-  "roomIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni członkowie mogą ja zobaczyć i dołączyć do tej grupy.",
+  "roomIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni użytkownicy mogą ją zobaczyć i dołączyć do tej grupy.",
   "welcomeToRoom": "Witamy w {channel}",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
   "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
@@ -167,15 +167,15 @@
   "emailAddresses": "Adresy e-mail",
   "inviteLink": "Albo użyj tego zaproszenia",
   "inviteToOrgTitle": "Zaproś użytkowników do swojej organizacji",
-  "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "inviteToOrgNote": "Zaproś wielu użytkowników na raz, po prostu oddziel ich adresy e-mailowe przecinkiem.",
   "InviteToOrgMessage": "Do wiadomości z zaproszeniem możesz dodać osobistą wiadomość.",
   "loadingLink": "Ładowanie linku...",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
+  "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "sendInvites": "Wyślij zaproszenie na e-mail",
   "personalMessage": "Wiadomość personalna",
   "leaveGroupDialogTitle": "Opuść prywatną grupę",
-  "leaveGroupDialogMessage": "Jesteś pewien, że chcesz opuścić prywatną grupę {channel}? Nie będziesz mógł ponownie dołączyć do{wontAbleToRejoin} grupy, chyba że zostaniesz ponownie zaproszony.",
+  "leaveGroupDialogMessage": "Jesteś pewien, że chcesz opuścić prywatną grupę {channel}? \nNie będziesz mógł ponownie dołączyć do nie {wontAbleToRejoin}, chyba że zostaniesz ponownie zaproszony.",
   "wontAbleToRejoin": "nie będzie w stanie ponownie dołączyć",
   "leaveGroupDialogCancel": "Anuluj",
   "leaveGroupDialogButton": "Opuść prywatną grupę",
@@ -257,13 +257,13 @@
   "localTime": "Czas lokalny",
   "newConversation": "Nowa konwersacja",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "searchMembersAndGroups": "Przeszukaj użytkowników i grupy..",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy",
   "nothingThatMatches": "Nie ma nic, co by pasowało ",
   "favorites": "Ulubione",
   "recent": "Ostatnie",
   "enterGroupName": "Wpisz nazwę grupy",
-  "private": "Prywatny",
-  "public": "Publiczność",
+  "private": "Prywatna",
+  "public": "Publiczna",
   "notificationSettingsTitle": "Powiadomienie w {group}",
   "_notificationSettingsTitle.comment": "Notification settings dialog.",
   "notificationSettingDefault": "Domyślne ustawienia powiadomień",
@@ -279,7 +279,7 @@
   "notificationSettingStatusComplete": "zapisany",
   "muteGroupTitle": "Wycisz tą grupę",
   "muteAllNotifications": "Zablokuj wszystkie powiadomienia dla tej grupy na wszystkich swoich urządzeniach",
-  "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie ma więcej dzwonków i sygnałów dźwiękowych pochodzących z\n        {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości.\n        Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego, {leaveButton}",
+  "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z\n        {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości.\n        Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
   "clickHereInlineLink": "kliknij tutaj",
   "_clickHereInlineLink.comment": "Link used inline in the middle of a sentence.",
   "desktopNotificationsTitle": "Powiadomienia desktopowe",
@@ -338,7 +338,7 @@
   "noMessagesFound": "Nie znaleziono żadnych wiadomości",
   "emptyPinnedMessagesSidebarHeadline": "Żadne wiadomości nie zostały jeszcze przypięte!",
   "_emptyPinnedMessagesSidebarHeadline.comment": "Headline in the sidebar, pinned messages zero design.",
-  "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypięte wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
+  "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypnij wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "makeRoomPrivate": "Uczynić grupę prywatną",
   "makeRoomPublic": "Zmień grupę na publiczną",
@@ -367,7 +367,7 @@
   "_searchActivities.comment": "Option in messages search sidebar.",
   "mentionsSidebarTitle": "Wzmianki",
   "searchSidebarTitle": "Wyniki wyszukiwania",
-  "whatIDo": "Co ja robię",
+  "whatIDo": "Stanowisko",
   "contactInfo": "Dane kontaktowe",
   "email": "E-mail",
   "skype": "Skype",
