LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -7,12 +7,12 @@
   "tryToReconnect": "Spróbujemy połączyć się ponownie",
   "reconnectSeconds": "albo możesz",
   "reconnectNow": "spróbuj teraz",
-  "tryingToReconnect": "Próbujemy ponownie połączyć się...",
+  "tryingToReconnect": "Próbujemy ponownie połączyć się…",
   "reconnectAlert": "Udało Ci się ponownie połączyć!",
   "noGroupFound": "Nie mogliśmy znaleźć tego, czego szukałeś - grupa mogła zostać usunięta, zmieniono nazwę lub została przeniesiona.",
   "noMessageFound": "Nie mogliśmy znaleźć wiadomości, której szukałeś.",
   "cannotMessageYourself": "Nie możesz wysyłać sobie wiadomości.",
-  "loadingChatHistory": "Ładowanie historii rozmów..",
+  "loadingChatHistory": "Ładowanie historii rozmów…",
   "grapeTrial": "Grape wersja próbna",
   "continueTrial": "Kontynuuj okres próbny",
   "enterDetails": "Wprowadź szczegóły",
@@ -22,7 +22,7 @@
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Zaproszenie grupowe)",
   "_groupInviteNotificationContent.comment": "Browser notification group invite content.",
-  "grapeCallPmInvitationContent": "zaproszenie na Grape Call...",
+  "grapeCallPmInvitationContent": "zaproszenie na Grape Call…",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "dzwonią do Ciebie",
   "_grapeCallPmMissedContent.comment": "Browser notification for missed pm Grape Call.",
@@ -30,8 +30,8 @@
   "inviteToGroup": "Zaproszenie do grupy",
   "createGroup": "Tworzenie grupy",
   "inviteMembers": "Zaproś użytkowników",
-  "addMembers": "Dodaj użytkowników...",
-  "loading": "Ładowanie...",
+  "addMembers": "Dodaj użytkowników…",
+  "loading": "Ładowanie…",
   "everyoneInvited": "Wszyscy zostali zaproszeni do tej grupy",
   "feelsLonely": "Czujesz się tu samotny?",
   "noOtherMembers": "Wydaje się, że Twoja organizacja Grape nie ma jeszcze innych użytkowników niż ty. Korzystanie z komunikatora jest wygodniejsze, jeżeli korzysta z niego kilka osób, więc dlaczego nie zaprosić kogoś. Jak tylko się dołączą, możecie wrócić i rozpocząć rozmowę.",
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Przypnij do ulubionych",
   "_pinToFavorites.comment": "Tooltip text",
-  "labeledMessagesTooltip": "Ważne wiadomości",
+  "importantMessages": "Ważne wiadomości",
   "mentions": "Wzmianki",
   "searchMessages": "Szukaj wiadomości",
   "joinVideoConference": "Przyłącz się do wideokonferencji",
@@ -69,7 +69,7 @@
   "inCall": "W trakcie rozmowy",
   "oneCallSameTime": "Możesz prowadzić tylko jedną rozmowę w tym samym czasie.",
   "userInAnotherCall": "{name} teraz na innej rozmowie.",
-  "recalculateScrollPosition": "Ponowne obliczenie pozycji przewijania..",
+  "recalculateScrollPosition": "Ponowne obliczenie pozycji przewijania…",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
   "pending": "Oczekiwanie",
   "_pending.comment": "message delivery status in tooltip",
@@ -86,16 +86,16 @@
   "moreServices": "Więcej usług",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
   "linkToAConnectedTask": "Link do połączonego zadania",
-  "_linkToAConnectedTask.comment": "Nlp create task dialog link label.",
-  "messageNotSendCheckConnection": "Wiadomość nie mogła zostać wysłana. Sprawdź swoje połączenie internetowe i",
+  "_linkToAConnectedTask.comment": "NLP create task dialog link label.",
+  "messageNotSentCheckConnection": "Wiadomość nie mogła zostać wysłana. Sprawdź swoje połączenie internetowe i",
   "clickToTryAgain": "kliknij tutaj, aby spróbować ponownie",
-  "roomIsPublic": "Ta grupa jest publiczna. Każdy członek może dołączyć do grupy i przeczytać historię.",
-  "roomIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni użytkownicy mogą ją zobaczyć i dołączyć do tej grupy.",
-  "welcomeToRoom": "Witamy w {channel}",
+  "groupIsPublic": "Ta grupa jest publiczna. Każdy członek może dołączyć do grupy i przeczytać historię.",
+  "groupIsPrivate": "Ta grupa jest prywatna. Tylko zaproszeni użytkownicy mogą ją zobaczyć i dołączyć do tej grupy.",
+  "welcomeToGroup": "Witamy w {group}",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
-  "_inviteMoreToGroup.comment": "Room Info Panel: invite members to the group/room",
+  "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
   "addServiceIntegration": "Dodaj integrację usług",
-  "_addServiceIntegration.comment": "Room Info Panel: link to add an integration to the current room",
+  "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
   "welcomeToPm": "Prywatna konwersacja z {partner}",
   "pmIntro": "To jest prywatna konwersacja między Tobą a {partner}.{br}Prywatne rozmowy są dostępne tylko dla was dwóch.",
   "deleteMessagesQuestion": "Skasować wybraną wiadomość?",
@@ -161,7 +161,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "buttonContinue": "Kontynuuj",
   "_buttonContinue.comment": "Intro button continue.",
-  "skipIfDone": "Już zrobione?{skip}",
+  "skipIfDone": "Już zrobione? {skip}",
   "_skipIfDone.comment": "Intro footer",
   "inviteGuest": "Zaproś gościa do tej grupy",
   "emailAddresses": "Adresy e-mail",
@@ -169,40 +169,40 @@
   "inviteToOrgTitle": "Zaproś użytkowników do swojej organizacji",
   "inviteToOrgNote": "Zaproś wielu użytkowników na raz, po prostu oddziel ich adresy e-mailowe przecinkiem.",
   "InviteToOrgMessage": "Do wiadomości z zaproszeniem możesz dodać osobistą wiadomość.",
-  "loadingLink": "Ładowanie linku...",
+  "loadingLink": "Ładowanie linku…",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
   "inviteToOrgError": "Wpisz prawidłowy adres e-mail oddzielony przecinkiem.",
   "sendInvites": "Wyślij zaproszenie na e-mail",
   "personalMessage": "Wiadomość personalna",
   "leaveGroupDialogTitle": "Opuść prywatną grupę",
-  "leaveGroupDialogMessage": "Jesteś pewien, że chcesz opuścić prywatną grupę {channel}? \nNie będziesz mógł ponownie dołączyć do nie {wontAbleToRejoin}, chyba że zostaniesz ponownie zaproszony.",
+  "leaveGroupDialogMessage": "Jesteś pewien, że chcesz opuścić prywatną grupę {group}? \nNie będziesz mógł ponownie dołączyć do nie {wontAbleToRejoin}, chyba że zostaniesz ponownie zaproszony.",
   "wontAbleToRejoin": "nie będzie w stanie ponownie dołączyć",
   "leaveGroupDialogCancel": "Anuluj",
   "leaveGroupDialogButton": "Opuść prywatną grupę",
   "linkAttachmentRemoveDialogTitle": "Usuń załącznik",
   "_linkAttachmentRemoveDialogTitle.comment": "Link attachment Remove Dialog: modal dialog title",
-  "linkAttachmentRemoveDialogAdminDomain": "Wszystkie linki z {domain}",
-  "_linkAttachmentRemoveDialogAdminDomain.comment": "Link attachment Remove Dialog: remove all the links from this domain",
-  "linkAttachmentRemoveDialogAdminLinkForOrg": "Tylko link {url}",
-  "_linkAttachmentRemoveDialogAdminLinkForOrg.comment": "Link attachment Remove Dialog: remove this link for the entire org",
+  "linkAttachmentRemoveDialogByDomain": "Wszystkie linki z {domain}",
+  "_linkAttachmentRemoveDialogByDomain.comment": "Link attachment Remove Dialog: admin option to remove all the links from this domain",
+  "linkAttachmentRemoveDialogLinkForOrg": "Tylko link {url}",
+  "_linkAttachmentRemoveDialogLinkForOrg.comment": "Link attachment Remove Dialog: admin option to remove this link for the entire org",
   "linkAttachmentRemoveDialogCancel": "Anuluj",
   "_linkAttachmentRemoveDialogCancel.comment": "Link attachment Remove Dialog: close the dialog without removing the attachment",
   "linkAttachmentRemoveDialogConfirm": "Tak, usuń",
   "_linkAttachmentRemoveDialogConfirm.comment": "Link attachment Remove Dialog: confirm attachment removal",
-  "linkAttachmentRemoveDialogAdminCheckbox": "Zablokuj przyszłe załączniki z tej strony?",
-  "_linkAttachmentRemoveDialogAdminCheckbox.comment": "Link attachment Remove Dialog: admin checkbox to remove the link for the organization",
+  "linkAttachmentRemoveDialogRemoveCheckbox": "Zablokuj przyszłe załączniki z tej strony?",
+  "_linkAttachmentRemoveDialogRemoveCheckbox.comment": "Link attachment Remove Dialog: admin checkbox to remove the link for the organization",
   "linkAttachmentRemoveDialogMessage": "Czy na pewno chcesz usunąć ten załącznik z wiadomości?",
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
-  "loginHeadline": "Dołącz do czatu!",
-  "_loginHeadline.comment": "Embedded chat login view headline.",
+  "loginHl": "Dołącz do czatu!",
+  "_loginHl.comment": "Embedded chat login view headline.",
   "loginHint": "Proszę zaloguj się, aby dołączyć do konwersacji na Grape.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Zaloguj się teraz",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
-  "manageGroupsJoinableBtn": "dołącz",
-  "_manageGroupsJoinableBtn.comment": "Manage Groups Dialog: join button label",
-  "manageGroupsJoinedBtn": "opuść",
-  "_manageGroupsJoinedBtn.comment": "Manage Groups Dialog: leave button label",
+  "manageGroupsJoinableButton": "dołącz",
+  "_manageGroupsJoinableButton.comment": "Manage Groups Dialog: join button label",
+  "manageGroupsJoinedButton": "opuść",
+  "_manageGroupsJoinedButton.comment": "Manage Groups Dialog: leave button label",
   "manageGroupsDialogTitle": "Zarządzanie grupami",
   "_manageGroupsDialogTitle.comment": "Manage Groups Dialog: dialog title",
   "manageGroupsLinkJoinable": "Grupy, do których można dołączyć",
@@ -211,7 +211,7 @@
   "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
   "manageGroupsCreateNew": "nowa konwersacja",
   "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
-  "markdownTipsLinkMessage": "Możesz też użyć {markdown}",
+  "youCanUseMarkdown": "Możesz też użyć {markdown}",
   "example": "Przykład",
   "_example.comment": "Title",
   "result": "Wynik",
@@ -230,13 +230,13 @@
   "_codeSnippetsInlineExample.comment": "Markdown: inline code example",
   "codeSnippetsBlockExample": "To jest blok kodu",
   "_codeSnippetsBlockExample.comment": "Markdown: code block example",
-  "blockquote": "Cytat blokowy",
-  "_blockquote.comment": "Title",
+  "blockquotes": "Cytat blokowy",
+  "_blockquotes.comment": "Title",
   "blockquoteExample": "> Jeden z najfajniejszych produktów, jakich używałem od jakiegoś czasu",
   "_blockquoteExample.comment": "Markdown: blockquote example",
   "markdownTipsPitch": "Jak poprawić swoje wiadomości na czacie za pomocą kilku zgrabnych stylów",
   "markdownTipsDialogTitle": "Wskazówki Markdown",
-  "deletedUser": "Usunięty użytkownik",
+  "deletedMember": "Usunięty użytkownik",
   "dateSeparatorToday": "Dzisiaj, {date}",
   "_dateSeparatorToday.comment": "Date separator used in history, search, mentions etc.",
   "dateSeparatorYesterday": "Wczoraj, {date}",
@@ -252,13 +252,13 @@
   "_unpinMessage.comment": "Message menu dropdown.",
   "deleteMessage": "Usuń wiadomość",
   "_deleteMessage.comment": "Message menu tooltip and dropdown.",
-  "deleteLinkAttachment": "Usuń załącznik",
+  "deleteAttachment": "Usuń załącznik",
   "quoteMessage": "Cytuj wiadomość",
   "localTime": "Czas lokalny",
   "newConversation": "Nowa konwersacja",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "searchMembersAndGroups": "Szukaj użytkownika lub grupy",
-  "nothingThatMatches": "Nie ma nic, co by pasowało ",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
+  "nothingThatMatches": "Nie ma nic, co by pasowało",
   "favorites": "Ulubione",
   "recent": "Ostatnie",
   "enterGroupName": "Wpisz nazwę grupy",
@@ -276,12 +276,12 @@
   "_notificationSettingDirectMention.comment": "Notification setting name.",
   "notificationSettingOff": "Nic",
   "_notificationSettingOff.comment": "Notification setting name.",
-  "notificationSettingStatusComplete": "zapisany",
+  "notificationSettingSaved": "zapisany",
   "muteGroupTitle": "Wycisz tą grupę",
   "muteAllNotifications": "Zablokuj wszystkie powiadomienia dla tej grupy na wszystkich swoich urządzeniach",
   "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z\n        {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości.\n        Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
-  "clickHereInlineLink": "kliknij tutaj",
-  "_clickHereInlineLink.comment": "Link used inline in the middle of a sentence.",
+  "clickHere": "kliknij tutaj",
+  "_clickHere.comment": "Link used inline in the middle of a sentence.",
   "desktopNotificationsTitle": "Powiadomienia desktopowe",
   "mobileNotificationsTitle": "Powiadomienia Mobile Push",
   "notificationSettingsHint": "Możesz zmienić domyślne preferencje na swoim koncie {link}",
@@ -308,24 +308,24 @@
   "logOut": "Wyloguj się",
   "_logOut.comment": "Main org dropdown menu",
   "settings": "Ustawienia",
-  "roomDeleteDialogInputLabel": "Proszę wpisz nazwę grupy w celu potwierdzenia",
-  "_roomDeleteDialogInputLabel.comment": "Room Delete Dialog: input label",
-  "roomDeleteDialogDelete": "usuń",
-  "_roomDeleteDialogDelete.comment": "Room Delete Dialog: delete button message",
-  "roomDeleteDialogConfirmMessage": "Czy jesteś pewien, że chcesz usunąć tę grupę?",
-  "_roomDeleteDialogConfirmMessage.comment": "Room Delete Dialog: confirm (info) message",
-  "roomDeleteDialogConfirmWarning": "Ostrzeżenie: Ta akcja nie może zostać cofnięta!",
-  "_roomDeleteDialogConfirmWarning.comment": "Room Delete Dialog: confirm (warning) message",
-  "roomDeleteDialogTitle": "Skasuj \"{roomName}\"?",
-  "_roomDeleteDialogTitle.comment": "Room Delete Dialog: dialog title",
-  "roomDeleteDialogProvideName": "Proszę wpisz nazwę grupy, którą chcesz usunąć.",
-  "_roomDeleteDialogProvideName.comment": "Room Delete Dialog: validation message",
-  "roomDeleteDialogNotMatchingName": "Nazwa grupy nie zgadza się",
-  "_roomDeleteDialogNotMatchingName.comment": "Room Delete Dialog: validation message",
-  "roomDeleteDialoginputPlaceholder": "Potwierdź nazwę grupy...",
-  "_roomDeleteDialoginputPlaceholder.comment": "Room Delete Dialog: input's placeholder",
-  "roomColor": "Kolor grupy",
-  "roomIcon": "Ikona grupy",
+  "groupDeleteDialogInputLabel": "Proszę wpisz nazwę grupy w celu potwierdzenia",
+  "_groupDeleteDialogInputLabel.comment": "Group Delete Dialog: input label",
+  "groupDeleteDialogDelete": "usuń",
+  "_groupDeleteDialogDelete.comment": "Group Delete Dialog: delete button message",
+  "groupDeleteDialogConfirmMessage": "Czy jesteś pewien, że chcesz usunąć tę grupę?",
+  "_groupDeleteDialogConfirmMessage.comment": "Group Delete Dialog: confirm (info) message",
+  "groupDeleteDialogConfirmWarning": "Ostrzeżenie: Ta akcja nie może zostać cofnięta!",
+  "_groupDeleteDialogConfirmWarning.comment": "Group Delete Dialog: confirm (warning) message",
+  "groupDeleteDialogTitle": "Skasuj \"{groupName}\"?",
+  "_groupDeleteDialogTitle.comment": "Group Delete Dialog: dialog title",
+  "groupDeleteDialogProvideName": "Proszę wpisz nazwę grupy, którą chcesz usunąć.",
+  "_groupDeleteDialogProvideName.comment": "Group Delete Dialog: validation message",
+  "groupDeleteDialogNotMatchingName": "Nazwa grupy nie zgadza się",
+  "_groupDeleteDialogNotMatchingName.comment": "Group Delete Dialog: validation message",
+  "groupDeleteDialoginputPlaceholder": "Potwierdź nazwę grupy…",
+  "_groupDeleteDialoginputPlaceholder.comment": "Group Delete Dialog: input's placeholder",
+  "groupColor": "Kolor grupy",
+  "groupIcon": "Ikona grupy",
   "labeledMessagesSidebarTitle": "Ważne wiadomości",
   "sidebarLabelInChannel": "w {channel}",
   "labeledMessagesNoContentTitle": "To tutaj dzieje się magia.",
@@ -336,35 +336,35 @@
   "learnMoreLink": "dowiedź się więcej",
   "_learnMoreLink.comment": "learn more link",
   "noMessagesFound": "Nie znaleziono żadnych wiadomości",
-  "emptyPinnedMessagesSidebarHeadline": "Żadne wiadomości nie zostały jeszcze przypięte!",
-  "_emptyPinnedMessagesSidebarHeadline.comment": "Headline in the sidebar, pinned messages zero design.",
+  "emptyPinnedMessagesSidebarHl": "Żadne wiadomości nie zostały jeszcze przypięte!",
+  "_emptyPinnedMessagesSidebarHl.comment": "Headline in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypnij wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
-  "makeRoomPrivate": "Uczynić grupę prywatną",
-  "makeRoomPublic": "Zmień grupę na publiczną",
-  "deleteRoom": "Usuń grupę",
+  "makeGroupPrivate": "Uczynić grupę prywatną",
+  "makeGroupPublic": "Zmień grupę na publiczną",
+  "deleteGroup": "Usuń grupę",
   "editGroup": "Edytuj grupę",
-  "addGroupDescription": "Dodaj opis grupy tutaj..",
-  "enterGroupNameHere": "Wpisz nazwę grupy tutaj..",
+  "addGroupDescription": "Dodaj opis grupy tutaj…",
+  "enterGroupNameHere": "Wpisz nazwę grupy tutaj…",
   "notificationSettingsTooltip": "Edycja ustawień powiadomień",
   "membersList": "Lista użytkowników",
-  "_membersList.comment": "Room Info Panel: link to members list of the current room",
+  "_membersList.comment": "Group Info Panel: link to members list of the current group",
   "leaveChannel": "Opuść {channel}",
-  "_leaveChannel.comment": "Room Info Panel: leave room link",
+  "_leaveChannel.comment": "Group Info Panel: leave group link",
   "members": "Użytkownicy",
-  "sharedInRoom": "Udostępnij w {channelName}",
-  "_sharedInRoom.comment": "*Describe sharedInRoom*, example: 'Shared in Office'",
+  "sharedInGroup": "Udostępnij w {channelName}",
+  "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
   "sharedInPm": "Udostępnij z {channelName}",
   "_sharedInPm.comment": "*Describe sharedInPm*, example: Shared with Felix'",
   "noSharedFiles": "Brak współdzielonych plików",
-  "showRoomMentions": "Pokaż wzmianki grupowe",
-  "_showRoomMentions.comment": "Option in messages mention sidebar.",
+  "showGroupMentions": "Pokaż wzmianki grupowe",
+  "_showGroupMentions.comment": "Option in messages mention sidebar.",
   "onlyInThisConversationMentions": "Tylko w tej konwersacji",
   "_onlyInThisConversationMentions.comment": "Option in messages mention sidebar.",
   "onlyInThisConversationMessages": "Tylko w tej konwersacji",
   "_onlyInThisConversationMessages.comment": "Option in messages search sidebar.",
-  "searchActivities": " Uwzględnij działania",
-  "_searchActivities.comment": "Option in messages search sidebar.",
+  "includeActivities": " Uwzględnij działania",
+  "_includeActivities.comment": "Option in messages search sidebar.",
   "mentionsSidebarTitle": "Wzmianki",
   "searchSidebarTitle": "Wyniki wyszukiwania",
   "whatIDo": "Stanowisko",
@@ -372,8 +372,8 @@
   "email": "E-mail",
   "skype": "Skype",
   "phone": "Telefon",
-  "aboutUserTitle": "O tym członku",
-  "_aboutUserTitle.comment": "User profile sidebar, about user title.",
+  "aboutMemberTitle": "O tym członku",
+  "_aboutMemberTitle.comment": "Member profile sidebar, about user title.",
   "videoConferencingTitle": "Przykro mi, ale wideokonferencje nie są obsługiwane w tej przeglądarce.",
   "unsupportedBrowser": "Niestety, używana obecnie przeglądarka nie obsługuje wideokonferencji z Grape Call. Proszę użyć zamiast tego naszego {desktopApp}.",
   "openInDesktop": "Otwarte w Grape Desktop",
