LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -12,7 +12,7 @@
   "noGroupFound": "Nous n'avons pas pu trouver ce que vous cherchiez - le groupe a peut-être été supprimé, renommé ou déplacé.",
   "noMessageFound": "Nous n'avons pas trouvé le message que vous cherchiez.",
   "cannotMessageYourself": "Vous ne pouvez pas vous envoyer de message.",
-  "loadingChatHistory": "Chargement de l'historique de votre tchat...",
+  "loadingChatHistory": "Chargement de l'historique de votre chat...",
   "grapeTrial": "Essayer Grape",
   "continueTrial": "Continuer à essayer",
   "enterDetails": "Entrez les détails",
@@ -131,7 +131,7 @@
   "download": "télécharger",
   "introHlWelcome": "Bienvenue",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "Grape est une application de tchat pour les équipes. Nous vous aidons à rendre la communication au sein de votre équipe plus efficace, plus productive et plus amusante. Si vous n'avez pas encore utilisé Grape, nous vous recommandons de suivre notre tutoriel de 90 secondes.",
+  "introTextWelcome": "Grape est une application de chat pour les équipes. Nous vous aidons à rendre la communication au sein de votre équipe plus efficace, plus productive et plus amusante. Si vous n'avez pas encore utilisé Grape, nous vous recommandons de suivre notre tutoriel de 90 secondes.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Trouvez les données de votre équipe",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
@@ -193,7 +193,7 @@
   "_linkAttachmentRemoveDialogRemoveCheckbox.comment": "Link attachment Remove Dialog: admin checkbox to remove the link for the organization",
   "linkAttachmentRemoveDialogMessage": "Êtes-vous sûr de vouloir supprimer cette pièce jointe du message ?",
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
-  "loginHl": "Rejoindre le tchat !",
+  "loginHl": "Rejoindre le chat !",
   "_loginHl.comment": "Embedded chat login view headline.",
   "loginHint": "Veuillez vous connecter pour vous joindre à la conversation sur Grape.",
   "_loginHint.comment": "Embedded chat login view hint.",
@@ -234,7 +234,7 @@
   "_blockquotes.comment": "Title",
   "blockquoteExample": "> Un des produits les plus cool que j'ai utilisés depuis un moment",
   "_blockquoteExample.comment": "Markdown: blockquote example",
-  "markdownTipsPitch": "Comment améliorer vos messages de tchat grâce à des styles astucieux",
+  "markdownTipsPitch": "Comment améliorer vos messages de chat grâce à des styles astucieux",
   "markdownTipsDialogTitle": "Conseils pour la démarque",
   "deletedMember": "Membre supprimé",
   "dateSeparatorToday": "Aujourd'hui, {date}",
