Added "Remove from Favorites" tooltip text

--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -59,7 +59,9 @@
   "imageWithoutDescription": "Obrazek: [Brak opisu]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Przypnij do ulubionych",
-  "_pinToFavorites.comment": "Tooltip text",
+  "_pinToFavorites.comment": "Pin to favorites tooltip text",
+  "removeFromFavorites": "Pin to Favorites",
+  "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Ważne wiadomości",
   "mentions": "Wzmianki",
   "searchMessages": "Szukaj wiadomości",
