--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -59,7 +59,9 @@
   "imageWithoutDescription": "Bild: [Keine Beschreibung]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Zu Favoriten hinzufügen",
-  "_pinToFavorites.comment": "Tooltip text",
+  "_pinToFavorites.comment": "Pin to favorites tooltip text",
+  "removeFromFavorites": "Pin to Favorites",
+  "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Wichtige Nachrichten",
   "mentions": "Erwähnungen",
   "searchMessages": "Nachrichten durchsuchen",
