--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -59,7 +59,9 @@
   "imageWithoutDescription": "Image: [No Description]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Pin to Favorites",
-  "_pinToFavorites.comment": "Tooltip text",
+  "_pinToFavorites.comment": "Pin to favorites tooltip text",
+  "removeFromFavorites": "Pin to Favorites",
+  "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Important Messages",
   "mentions": "Mentions",
   "searchMessages": "Search messages",
