--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -59,7 +59,9 @@
   "imageWithoutDescription": "Image : [Pas de description]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Ajouter aux favoris",
-  "_pinToFavorites.comment": "Tooltip text",
+  "_pinToFavorites.comment": "Pin to favorites tooltip text",
+  "removeFromFavorites": "Pin to Favorites",
+  "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Messages importants",
   "mentions": "Mentions",
   "searchMessages": "Recherche de messages",
